force-app/src/objects/cpm__Payment__c.object
<CustomObject>
    <description>Payments are actual amounts of money transfered to our organisation, either spontaneously or as the result of a Recurring Payment.</description>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor.</description>
        <inlineHelpText>The debitor.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <description>The amount of the payment.</description>
        <inlineHelpText>The amount of this payment.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Collection_Date__c</fullName>
        <description>The date this payment was collected.</description>
        <inlineHelpText>The date the Payment was collected.</inlineHelpText>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor.</description>
        <inlineHelpText>The debitor.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Description__c</fullName>
        <inlineHelpText>Used on bank statement</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <label>IBAN</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Inbound_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Report</label>
        <referenceTo>cpm__Inbound_Report__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Installment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The installment this payment originated from.</description>
        <inlineHelpText>The installment this payment originated from.</inlineHelpText>
        <label>Installment</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.cpm__Payment_Profile__c</field>
                <operation>equals</operation>
                <valueField>cpm__Mandate__c.cpm__Payment_Profile__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Name__c</fullName>
        <description>The name of the debitor. whether it be a organisation or contact.</description>
        <formula>IF (ISBLANK(cpm__Account__c) , cpm__Contact__r.FirstName &amp; &quot; &quot; &amp; cpm__Contact__r.LastName , cpm__Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the debitor.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Originating_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign that let to this payment.</description>
        <inlineHelpText>The campaign that let to this payment.</inlineHelpText>
        <label>Originating Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Adyen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment profile (IBAN) used to collect this payment.</description>
        <inlineHelpText>The payment profile (IBAN) used to collect this payment.</inlineHelpText>
        <label>Payment Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>By default only active records are shown.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Reference__c</fullName>
        <description>The payment reference given by the debitor.</description>
        <inlineHelpText>The payment reference given by the debitor.</inlineHelpText>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor__c</fullName>
        <description>StepOrange Payment Processor</description>
        <label>Processor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reason_for_Mutation__c</fullName>
        <description>If the payment is negative, the reason why should be listed here.</description>
        <inlineHelpText>Why this payment is of a negative amount.</inlineHelpText>
        <label>Reason for Mutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reversal</fullName>
                </value>
                <value>
                    <fullName>Chargeback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Recurring Payment that resulted in this payment.</description>
        <inlineHelpText>The Recurring Payment that resulted in this payment.</inlineHelpText>
        <label>Recurring Payment</label>
        <referenceTo>cpm__Recurring_Payment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The refund that triggered this negative payment</description>
        <label>Refund</label>
        <referenceTo>cpm__Refund__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Reversal_Reason_Code__c</fullName>
        <description>The bank returnes reason codes when processing a reversal. This reason code is stored here.</description>
        <inlineHelpText>The bank reason code for the reversal.</inlineHelpText>
        <label>Reversal Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Source__c</fullName>
        <formula>IF ( NOT(ISBLANK( cpm__Installment__c )), TEXT(cpm__Installment__r.cpm__Source__c)  , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Council of International Schools</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Transaction_Sub_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Sub Element</label>
        <referenceTo>cpm__Transaction_Sub_Element__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>cpm__Transaction__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Wallet_Type__c</fullName>
        <description>The wallet type from the associated payment profile.</description>
        <formula>TEXT(cpm__Payment_Profile__r.cpm__Wallet_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The wallet type from the associated payment profile.</inlineHelpText>
        <label>Wallet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File</label>
        <referenceTo>proh__File__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY-{0}</displayFormat>
        <label>Payment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Collection_date_not_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(cpm__Collection_Date__c)</errorConditionFormula>
        <errorMessage>Collection date can&apos;t be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Lock_Fiscal_Period</fullName>
        <active>true</active>
        <errorConditionFormula>cpm__Collection_Date__c &lt;=  $Setup.cpm__Lock_Fiscal_Periods__c.cpm__Lock_Payments_Up_To__c</errorConditionFormula>
        <errorMessage>Fiscal period is closed. You can&apos;t edit this record</errorMessage>
    </validationRules>
</CustomObject>